{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 50,
  "lineage": "80eced5b-3a89-49b0-af07-0c197fde18ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b3db2a0c937e81",
            "arn": "arn:aws:ec2:us-west-2:590807097479:elastic-ip/eipalloc-0a9b3db2a0c937e81",
            "association_id": "eipassoc-07a188eb904db0712",
            "domain": "vpc",
            "id": "eipalloc-0a9b3db2a0c937e81",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b18b2bca1dd5944c",
            "private_dns": "ip-10-126-0-71.us-west-2.compute.internal",
            "private_ip": "10.126.0.71",
            "public_dns": "ec2-44-230-78-73.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.78.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:internet-gateway/igw-09d55015540a54880",
            "id": "igw-09d55015540a54880",
            "owner_id": "590807097479",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b3db2a0c937e81",
            "association_id": "eipassoc-07a188eb904db0712",
            "connectivity_type": "public",
            "id": "nat-0f452dc7e880fdf8e",
            "network_interface_id": "eni-0b18b2bca1dd5944c",
            "private_ip": "10.126.0.71",
            "public_ip": "44.230.78.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096eea1aadaba3f43",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:route-table/rtb-01e859b53cd892354",
            "id": "rtb-01e859b53cd892354",
            "owner_id": "590807097479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f452dc7e880fdf8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:route-table/rtb-068cf857af4032c9c",
            "id": "rtb-068cf857af4032c9c",
            "owner_id": "590807097479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d55015540a54880",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e23109c43c18b59a",
            "route_table_id": "rtb-01e859b53cd892354",
            "subnet_id": "subnet-01b47cf4998bc1033"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013979bf19f04c350",
            "route_table_id": "rtb-01e859b53cd892354",
            "subnet_id": "subnet-05c598ac2be0cbb8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7a33a7893e07f7b",
            "route_table_id": "rtb-068cf857af4032c9c",
            "subnet_id": "subnet-096eea1aadaba3f43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:security-group/sg-0fadf505ffe3d141d",
            "description": "Aurora DB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fadf505ffe3d141d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af67223315ac6525"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "imagesbucks3-aurora-sg",
            "name_prefix": "",
            "owner_id": "590807097479",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:security-group/sg-0af67223315ac6525",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af67223315ac6525",
            "ingress": [],
            "name": "imagesbucks3-lambda-sg",
            "name_prefix": "",
            "owner_id": "590807097479",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_allow_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-498650328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fadf505ffe3d141d",
            "security_group_rule_id": "sgr-0bc8e94dbbde64482",
            "self": false,
            "source_security_group_id": "sg-0af67223315ac6525",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.aurora_sg",
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:subnet/subnet-01b47cf4998bc1033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.126.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b47cf4998bc1033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590807097479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:subnet/subnet-05c598ac2be0cbb8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.126.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c598ac2be0cbb8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590807097479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:subnet/subnet-096eea1aadaba3f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.126.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096eea1aadaba3f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590807097479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "vpc_id": "vpc-0f630aeb5cb35f542"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590807097479:vpc/vpc-0f630aeb5cb35f542",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.126.0.0/16",
            "default_network_acl_id": "acl-09f8efd1973636cea",
            "default_route_table_id": "rtb-0241d67be627721d0",
            "default_security_group_id": "sg-03e776bd4db61bbca",
            "dhcp_options_id": "dopt-0f2477a887b961fa9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f630aeb5cb35f542",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0241d67be627721d0",
            "owner_id": "590807097479",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "imagesbucks3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}